--- a/carohr.html
+++ b/carohr.html
@@ -1205,16 +1205,16 @@ to {
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
-        <h1 class="modal-title fs-5" id="exampleModalToggleLabel">You're the BEST!</h1>
+        <h1 class="modal-title fs-5" id="exampleModalToggleLabel">How Would You Like To Donate?</h1>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
         <div class="row row-cols-1 row-cols-md-2 g-4">
   <div class="col">
     <div class="card">
-      <img src="btcwal.png" class="card-img-top" alt="...">
+      <img src="btcc.png" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
+        <h5 class="card-title">Bitcoin</h5>
       </div>
     </div>
   </div>
@@ -1222,23 +1222,23 @@ to {
     <div class="card">
       <img src="mswal.png" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
+        <h5 class="card-title">Other</h5>
       </div>
     </div>
   </div>
   <div class="col">
     <div class="card">
-      <img src="ethwal.png" class="card-img-top" alt="...">
+      <img src="ethpc.png" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
+        <h5 class="card-title">Ethereum</h5>
      </div>
     </div>
   </div>
   <div class="col">
     <div class="card">
-      <img src="mswal.png" class="card-img-top" alt="...">
+      <img src="venc.png" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
+        <h5 class="card-title">Venmo</h5>
    <!--     <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
     -->  </div>
     </div>
