--- a/carohr.html
+++ b/carohr.html
@@ -1187,7 +1187,7 @@ to {
         <div class="row row-cols-1 row-cols-md-2 g-4">
   <div class="col">
     <div class="card" style="align-items: center">
-      <img src="btcc.png" style="width:50%" class="card-img-top" alt="...">
+      <img src="sbtcc.png" style="width:50%" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Bitcoin</h5>
       </div>
@@ -1195,7 +1195,7 @@ to {
   </div>
   <div class="col">
     <div class="card" style="align-items: center">
-      <img src="ethpc.png" style="width:50%" class="card-img-top" alt="...">
+      <img src="sethpc.png" style="width:50%" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Ethereum</h5>
      </div>
@@ -1203,7 +1203,7 @@ to {
   </div>
   <div class="col">
     <div class="card" style="align-items: center">
-      <img src="venc.png" style="width:50%" class="card-img-top" alt="...">
+      <img src="svenc.png" style="width:50%" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Venmo</h5>
    <!--     <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -1212,7 +1212,7 @@ to {
   </div>
   <div class="col">
     <div class="card" style="align-items: center">
-      <img src="mswal.png" style="width:50%" class="card-img-top" alt="...">
+      <img src="smsqrc.png" style="width:50%" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Other</h5>
       </div>
