--- a/carohr.html
+++ b/carohr.html
@@ -1184,9 +1184,10 @@ to {
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <div class="row row-cols-1 row-cols-md-2 g-4">
+   <!--     <div class="row row-cols-1 row-cols-md-2 g-4"> -->
+	      <div class="row row-cols-2 g-4">
   <div class="col">
-    <div class="card" style="align-items: center">
+    <div class="card" style="align-items: center" type="button" data-bs-toggle="modal" data-bs-target="#exampleModalToggle2">
       <img src="sbtcc.png" style="width:50%" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Bitcoin</h5>
@@ -1194,7 +1195,7 @@ to {
     </div>
   </div>
   <div class="col">
-    <div class="card" style="align-items: center">
+    <div class="card" style="align-items: center" type="button" data-bs-toggle="modal" data-bs-target="#exampleModalToggle3">
       <img src="sethpc.png" style="width:50%" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Ethereum</h5>
@@ -1202,7 +1203,7 @@ to {
     </div>
   </div>
   <div class="col">
-    <div class="card" style="align-items: center">
+    <div class="card" style="align-items: center" type="button" data-bs-toggle="modal" data-bs-target="#exampleModalToggle4">
       <img src="svenc.png" style="width:50%" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Venmo</h5>
@@ -1221,9 +1222,9 @@ to {
 </div>
       </div>
       <div class="modal-footer">
-        <button class="btn btn-primary" data-bs-target="#exampleModalToggle2" data-bs-toggle="modal">Bitcoin</button>
+     <!--   <button class="btn btn-primary" data-bs-target="#exampleModalToggle2" data-bs-toggle="modal">Bitcoin</button>
 	<button class="btn btn-primary" data-bs-target="#exampleModalToggle3" data-bs-toggle="modal">Ethereum</button>
-	<button class="btn btn-primary" data-bs-target="#exampleModalToggle4" data-bs-toggle="modal">Other</button>
+	<button class="btn btn-primary" data-bs-target="#exampleModalToggle4" data-bs-toggle="modal">Other</button> -->
       </div>
     </div>
   </div>
