--- a/carohr.html
+++ b/carohr.html
@@ -1212,7 +1212,7 @@ to {
     </div>
   </div>
   <div class="col">
-    <div class="card" style="align-items: center">
+    <div class="card" style="align-items: center" type="button" data-bs-toggle="modal" data-bs-target="#exampleModalToggle4">
       <img src="smsqrc.png" style="width:50%" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Other</h5>
@@ -1222,8 +1222,8 @@ to {
 </div>
       </div>
       <div class="modal-footer">
-     <!--   <button class="btn btn-primary" data-bs-target="#exampleModalToggle2" data-bs-toggle="modal">Bitcoin</button>
-	<button class="btn btn-primary" data-bs-target="#exampleModalToggle3" data-bs-toggle="modal">Ethereum</button>
+        <button class="btn btn-primary" data-bs-target="#exampleModalToggle2" data-bs-toggle="modal">Something Special</button>
+	<!-- <button class="btn btn-primary" data-bs-target="#exampleModalToggle3" data-bs-toggle="modal">Ethereum</button>
 	<button class="btn btn-primary" data-bs-target="#exampleModalToggle4" data-bs-toggle="modal">Other</button> -->
       </div>
     </div>
