--- a/carohr.html
+++ b/carohr.html
@@ -1185,9 +1185,9 @@ to {
       </div>
       <div class="modal-body">
    <!--     <div class="row row-cols-1 row-cols-md-2 g-4"> -->
-	      <div class="row row-cols-2 g-4">
+        <div class="row row-cols-2 g-4">
   <div class="col">
-    <div class="card" style="align-items: center" type="button" data-bs-toggle="modal" data-bs-target="#exampleModalToggle2">
+    <div class="card" style="align-items: center; border-width:0" type="button" data-bs-toggle="modal" data-bs-target="#exampleModalToggle2">
       <img src="sbtcc.png" style="width:50%" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Bitcoin</h5>
@@ -1195,7 +1195,7 @@ to {
     </div>
   </div>
   <div class="col">
-    <div class="card" style="align-items: center" type="button" data-bs-toggle="modal" data-bs-target="#exampleModalToggle3">
+    <div class="card" style="align-items: center; border-width:0 type="button" data-bs-toggle="modal" data-bs-target="#exampleModalToggle3">
       <img src="sethpc.png" style="width:50%" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Ethereum</h5>
@@ -1203,7 +1203,7 @@ to {
     </div>
   </div>
   <div class="col">
-    <div class="card" style="align-items: center" type="button" data-bs-toggle="modal" data-bs-target="#exampleModalToggle4">
+    <div class="card" style="align-items: center; border-width:0" type="button" data-bs-toggle="modal" data-bs-target="#exampleModalToggle4">
       <img src="svenc.png" style="width:50%" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Venmo</h5>
@@ -1212,7 +1212,7 @@ to {
     </div>
   </div>
   <div class="col">
-    <div class="card" style="align-items: center" type="button" data-bs-toggle="modal" data-bs-target="#exampleModalToggle4">
+    <div class="card" style="align-items: center; border-width:0" type="button" data-bs-toggle="modal" data-bs-target="#exampleModalToggle4">
       <img src="smsqrc.png" style="width:50%" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Other</h5>
