--- a/carohr.html
+++ b/carohr.html
@@ -506,7 +506,7 @@ to {
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body" style="color:white">
-	      <ul class="d-grid gap-4 my-5 list-unstyled small">
+        <ul class="d-grid gap-4 my-5 list-unstyled small">
           <li class="d-flex gap-4">
             <svg class="bi text-body-secondary flex-shrink-0" width="48" height="48"><use xlink:href="#rocket"/></svg>
             <div>
@@ -548,7 +548,30 @@ to {
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body" style="color:white">
-        We'll use all the rasied capital to investment in real estate, Web3 projects, etc.
+	      <ul class="d-grid gap-4 my-5 list-unstyled small">
+          <li class="d-flex gap-4">
+            <svg class="bi text-body-secondary flex-shrink-0" width="48" height="48"><use xlink:href="#globe-americas"/></svg>
+            <div>
+              <h5 class="mb-0">Real Estate</h5>
+              All types
+            </div>
+          </li>
+          <li class="d-flex gap-4">
+            <svg class="bi text-warning flex-shrink-0" width="48" height="48"><use xlink:href="#infinity"/></svg>
+            <div>
+              <h5 class="mb-0">Web3 Projects</h5>
+              "Skys the limit!"
+            </div>
+          </li>
+          <li class="d-flex gap-4">
+            <svg class="bi text-primary flex-shrink-0" width="48" height="48"><use xlink:href="#robot"/></svg>
+            <div>
+              <h5 class="mb-0">Content Creation</h5>
+              Media / Brand Swag / Live Events
+            </div>
+          </li>
+        </ul>
+        
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary">Learn More</button>
