--- a/carohr.html
+++ b/carohr.html
@@ -642,8 +642,8 @@ to {
 			    </div>
 			</div>
 			<h2 class="fw-normal">The</h2>
-                        <p style="margin-bottom:0rem !important">Some representative placeholder content for the first column.</p>
-			    <div class="collapse" id="theman" style="margin-top:1rem">
+                  <!--      <p style="margin-bottom:0rem !important">Some representative placeholder content for the first column.</p>
+		-->	    <div class="collapse" id="theman" style="margin-top:1rem">
   <div class="card card-body">
     Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
   </div>
@@ -662,8 +662,8 @@ to {
 					            </div>
 					    </div>
                         <h2 class="fw-normal">Three</h2>
-                        <p style="margin-bottom:0rem !important">Representative placeholder content for the second column.</p>
-			    <div class="collapse" id="themyth" style="margin-top:1rem">
+                  <!--      <p style="margin-bottom:0rem !important">Representative placeholder content for the second column.</p>
+		-->	    <div class="collapse" id="themyth" style="margin-top:1rem">
   <div class="card card-body">
     Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
   </div>
@@ -683,8 +683,8 @@ to {
 					            </div>
 					    </div>
                         <h2 class="fw-normal">Amigos</h2>
-                        <p style="margin-bottom:0rem !important">And lastly this, the third column of representative placeholder content.</p>
-			    			    <div class="collapse" id="thelegend" style="margin-top:1rem">
+                <!--        <p style="margin-bottom:0rem !important">And lastly this, the third column of representative placeholder content.</p>
+		-->	    			    <div class="collapse" id="thelegend" style="margin-top:1rem">
   <div class="card card-body">
     Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
   </div>
@@ -946,13 +946,13 @@ to {
       <img src="svenc.png" style="width:50%" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Venmo</h5>
-   <!--     <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-    -->  </div>
+    </div>
     </div>
   </div>
   <div class="col">
     <div class="card" style="align-items: center; border-width:0" type="button" data-bs-toggle="modal" data-bs-target="#exampleModalToggle4">
-      <img src="smsqrc.png" style="width:50%" class="card-img-top" alt="...">
+    
+	    <img src="smsqrc.png" style="width:50%" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Other</h5>
       </div>
