--- a/carohr.html
+++ b/carohr.html
@@ -13,7 +13,6 @@
 <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/carousel/">
 <link href="bootstrap.min.css" rel="stylesheet">
-	      <!-- Custom styles for this template -->
     <link href="carousel.css" rel="stylesheet">
 
     <style>
@@ -689,11 +688,10 @@ to {
 	    <div class="container px-4">
                 <div class="row">
                     <div class="reveal">
-			<h2 class="pb-2 border-bottom" style="padding-top: 4rem; color:#0d6efd !important">The Goodies</h2>
+			<h2 class="pb-2 border-bottom" style="padding-top: 4rem;">The Content</h2>
                     </div>
                 </div>
-            </div>
-		
+            </div>	
 		
 	</section>	
 	
@@ -703,7 +701,7 @@ to {
 <main style="background: linear-gradient(180deg,#000000,rgba(12,14,31) 90%); box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5)">
 
   <div class="container marketing" style="text-align: center">
-
+<!--
     <div class="reveal row featurette">
       <div class="col-md-7">
         <h2 class="featurette-heading fw-normal lh-1">T-Shirts <span class="text-body-secondary" style="color:#0d6efd !important"></span></h2>
@@ -737,7 +735,7 @@ to {
     </div>
 
     <hr class="featurette-divider">
-
+-->
 	    
 <!-- NFT Collection -->
 	    <div class="album">
