--- a/carohr.html
+++ b/carohr.html
@@ -89,7 +89,8 @@
       }
 	  
 	    .page1 {
-  background-image: url('sticker3.png');
+  /* background-image: url('sticker3.png'); */
+  background-image: url('digitallogo.png');
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
