--- a/carohr.html
+++ b/carohr.html
@@ -89,8 +89,7 @@
       }
 	  
 	    .page1 {
-  /* background-image: url('sticker3.png'); */
-  background-image: url('digitallogo.png');
+  background-image: url('sticker3.png');
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
@@ -114,7 +113,8 @@
     }
 	    
 	    .page8 {
-            background-image: url('palm-tree8.png');
+        /*    background-image: url('palm-tree8.png'); */
+		    background-image: url('digitallogo.png');
             background-repeat: no-repeat;
             background-size: contain;
             background-position: center;
