--- a/carohr.html
+++ b/carohr.html
@@ -479,19 +479,19 @@ to {
   	    
   <div class="reveal row featurette">
     <div class="col" style="text-align: left">
-          <h2 class="featurette-heading fw-normal lh-1">Phase 1<span class="text-body-secondary" style="color:#0d6efd !important"></span></h2>
+<h2 class="featurette-heading fw-normal lh-1">Phase 1:<br>Help Us Get To Outer Space!<span class="text-body-secondary" style="color:#0d6efd !important"></span></h2>
           <p class="lead"><ul class="d-grid gap-4 my-5 list-unstyled small">
-          <li class="d-flex gap-4">
+       <!--   <li class="d-flex gap-4">
             <svg class="bi text-body-secondary flex-shrink-0" width="48" height="48"><use xlink:href="#rocket"/></svg>
             <div>
-              <h5 class="mb-0">Help Us Get To Outer Space!</h5>
-              Every dollar we make gets us one step closer to that giant leap.
+              <h5 class="mb-0">Every dollar we make gets us one step closer to that giant leap.</h5>
+              
             </div>
-          </li>
+          </li> -->
           <li class="d-flex gap-4">
             <svg class="bi text-warning flex-shrink-0" width="48" height="48"><use xlink:href="#balloon-heart"/></svg>
             <div>
-              <h5 class="mb-0">Donate any amount now</h5>
+              <h5 class="mb-0"><span type="button" data-bs-toggle="modal" data-bs-target="#exampleModalToggle" style="color:#0d6efd"><u>Donate now</u> </span> Any amount.</h5>
               ...and we'll send you some branded goodies in return.
             </div>
           </li>
