--- a/carohr.html
+++ b/carohr.html
@@ -505,7 +505,7 @@ to {
         </ul></p>
     </div>
   </div>
-	    
+<!--
         <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
             <div class="reveal col">
                 <div type="button" data-bs-toggle="modal" data-bs-target="#P1M" class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('space5.png');">
@@ -527,11 +527,13 @@ to {
       <div class="reveal2 col">
         <div type="button" data-bs-toggle="modal" data-bs-target="#P3M" class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('space8.png');">
           <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1" style="border-color: white; border-block-width: 0.1px">
-            <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Phase 3</h3> <div style="height:10rem"></div>
+            <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Phase 3</h3>
+	    <div style="height:10rem"></div>
           </div>
         </div>
       </div>
     </div>
+-->
   </div>	  
 	  
 	  
