--- a/carohr.html
+++ b/carohr.html
@@ -474,13 +474,69 @@ to {
 	-->
 	  
 <!-- Mission section-->
+	
+<div class="container px-4 py-5">
+    <h2 class="pb-2 border-bottom">The Mission</h2>
+
+    <div class="row row-cols-1 row-cols-md-2 align-items-md-center g-5 py-5">
+      <div class="col d-flex flex-column align-items-start gap-2">
+        <h3 class="fw-bold">Help Us Get To Outer Space!</h3>
+        <p class="text-body-primary">Every dollar we make gets us one step closer to that giant leap.</p><p>Donate any amount now
+              ...and we'll send you some branded goodies in return.</p>
+        <a href="#" class="btn btn-primary btn-lg">Donate Now!</a>
+      </div>
+
+      <div class="col">
+        <div class="row row-cols-1 row-cols-sm-2 g-4">
+ 
+		  
+		  <div class="col d-flex align-items-start">
+        <svg class="bi text-primary text-body-primary flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#balloon-heart"></use></svg>
+        <div>
+          <h3 class="fw-bold mb-0 fs-4">Phase 1: Fundraise</h3>
+          <p>Sell Merch & NFT's<br>Host Events<br>Rinse and Repeat</p>
+        </div>
+      </div>
+	  
+	  	  <div class="col d-flex align-items-start">
+        <svg class="bi text-primary text-body-primary flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#balloon-heart"></use></svg>
+        <div>
+          <h3 class="fw-bold mb-0 fs-4">Phase 2: Invest</h3>
+          <p>Real Estate<br>Other<br>Etc.</p>
+        </div>
+      </div>
+	  
+	  	  <div class="col d-flex align-items-start">
+        <svg class="bi text-primary text-body-primary flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#balloon-heart"></use></svg>
+        <div>
+          <h3 class="fw-bold mb-0 fs-4">Phase 3: Buy Tickets</h3>
+          <p>$250,000<br>$500,000<br>$1,000,000</p>
+        </div>
+      </div>
+	  
+	  <div class="col d-flex align-items-start">
+        <svg class="bi text-primary text-body-primary flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#balloon-heart"></use></svg>
+        <div>
+          <h3 class="fw-bold mb-0 fs-4">Phase 4: Fulfil Mission</h3>
+          <p>Take the ride<br>Die Happy</p>
+        </div>
+      </div>
+
+ 
+        </div>
+      </div>
+    </div>
+  </div>	
+	
+	
+	
+	
 <div class="container px-4 py-5" id="custom-cards" style="background-color:black">
-  <h2 class="reveal pb-2 border-bottom" style="color:white">The Mission</h2>
-  	    
+  <h2 class="reveal pb-2 border-bottom" style="color:white">The Mission</h2>  	    
   <div class="reveal row featurette">
     <div class="col" style="text-align: left">
-<h2 class="featurette-heading fw-normal lh-1">Phase 1:<br>Help Us Get To Outer Space!<span class="text-body-secondary" style="color:#0d6efd !important"></span></h2>
-          <p class="lead"><ul class="d-grid gap-4 my-5 list-unstyled small">
+    <h2 class="featurette-heading fw-normal lh-1">Phase 1:<br>Help Us Get To Outer Space!<span class="text-body-secondary" style="color:#0d6efd !important"></span></h2>
+      <p class="lead"><ul class="d-grid gap-4 my-5 list-unstyled small">
        <!--   <li class="d-flex gap-4">
             <svg class="bi text-body-secondary flex-shrink-0" width="48" height="48"><use xlink:href="#rocket"/></svg>
             <div>
@@ -502,7 +558,8 @@ to {
               Complete with all-acess pass to our next big event! 
             </div>
           </li>
-        </ul></p>
+        </ul>
+      </p>
     </div>
   </div>
 <!--
@@ -534,9 +591,12 @@ to {
       </div>
     </div>
 -->
-  </div>	  
+</div>	  
 	  
-	  
+
+	
+	
+	
 	  
 <!-- Astronaut section-->
         <section id="astro" style="background-color:black; color:white; box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5); margin-bottom: 3rem; padding-top: 3rem !important">
