--- a/carohr.html
+++ b/carohr.html
@@ -598,45 +598,45 @@ to {
   <div class="container">
       <div class="row row-cols-3 row-cols-sm-3 row-cols-md-3 g-3">
         <div class="col">
-          <div class="card shadow-sm">
-            <img src="1.jpg" class="card-img-top" alt="...">
-	    <div class="card-body">
-              <p class="card-text">This content is a little bit longer.</p>
+          <div class="card h-100 shadow-sm">
+           <svg class="bi text-primary" aria-label="Placeholder: Thumbnail" focusable="false"><use xlink:href="#incognito"/></svg>
+	    <div class="card-body" style="text-align: center">
+              <p class="card-text">The</p>
               <div class="d-flex justify-content-between align-items-center">
               </div>
             </div>
           </div>
         </div>
         <div class="col">
-          <div class="card shadow-sm">
-           <img src="2.jpg" class="card-img-top" alt="...">
-		   <div class="card-body">
-              <p class="card-text">This content is a little bit longer.</p>
+          <div class="card h-100 shadow-sm">
+           <svg class="bi text-primary" aria-label="Placeholder: Thumbnail" focusable="false"><use xlink:href="#robot"/></svg>
+	    <div class="card-body" style="text-align: center">
+              <p class="card-text">Three</p>
               <div class="d-flex justify-content-between align-items-center">          
               </div>
             </div>
           </div>
         </div>
         <div class="col">
-          <div class="card shadow-sm">
-           <img src="3.jpg" class="card-img-top" alt="...">
-		   <div class="card-body">
-              <p class="card-text">This content is a little bit longer.</p>
-                            <div class="d-flex justify-content-between align-items-center">            
+          <div class="card h-100 shadow-sm">
+           <svg class="bi text-primary" aria-label="Placeholder: Thumbnail" focusable="false"><use xlink:href="#incognito"/></svg>
+	    <div class="card-body" style="text-align: center">
+              <p class="card-text">Amigos</p>
+              <div class="d-flex justify-content-between align-items-center">            
               </div>
             </div>
           </div>
         </div>
       </div>
-    </div>			
+  </div>			
 	
-	    <div class="container px-4">
-      <div class="row">
-        <div class="reveal">
-          <h2 class="pb-2 border-bottom" style="padding-top: 4rem;">The Content</h2>
-        </div>
+  <div class="container px-4">
+    <div class="row">
+      <div class="reveal">
+        <h2 class="pb-2 border-bottom" style="padding-top: 4rem;">The Content</h2>
       </div>
     </div>
+  </div>
 	
 	
 	
