--- a/carohr.html
+++ b/carohr.html
@@ -475,9 +475,9 @@ to {
 <!-- Mission section-->
 	
 <div class="container px-4 py-5">
-  <h2 class="pb-2 border-bottom">The Mission</h2>
+  <h2 class="reveal pb-2 border-bottom">The Mission</h2>
 
-  <div class="row row-cols-1 row-cols-md-2 align-items-md-center g-5 py-5">
+  <div class="reveal row row-cols-1 row-cols-md-2 align-items-md-center g-5 py-5">
     <div class="col d-flex flex-column align-items-start gap-2">
       <h3 class="fw-bold">Help Us Get To Outer Space!</h3>
       <p class="text-body-primary">Every dollar we make gets us one step closer to that giant leap.</p>
@@ -596,7 +596,7 @@ to {
   </div>			
 			
   <div class="container">
-      <div class="row row-cols-3 row-cols-sm-3 row-cols-md-3 g-3">
+      <div class="reveal row row-cols-3 row-cols-sm-3 row-cols-md-3 g-3">
         <div class="col">
           <div class="card h-100 shadow-sm">
            <svg class="bi text-primary" aria-label="Placeholder: Thumbnail" focusable="false"><use xlink:href="#incognito"/></svg>
@@ -757,7 +757,7 @@ to {
 -->
 	    
 <!-- NFT Collection -->
-    <div class="album">
+    <div class="reveal album">
       <h2 class="featurette-heading fw-normal lh-1">Our First NFT Collection</h2>
       <p class="lead" style="padding-bottom:2rem">Very Special. Very Cool</p>
 		    
