--- a/carohr.html
+++ b/carohr.html
@@ -599,7 +599,7 @@ to {
       <div class="reveal row row-cols-3 row-cols-sm-3 row-cols-md-3 g-3">
         <div class="col">
           <div class="card h-100 shadow-sm">
-            <svg class="bi text-warning text-body-primary flex-shrink-0 me-3" width="100%"><use xlink:href="#incognito"></use></svg> 
+            <svg class="bi text-warning text-body-primary flex-shrink-0 me-3" width="100%" height="100"><use xlink:href="#incognito"></use></svg> 
            <div class="card-body" style="text-align: center">
               <p class="card-text">The</p>
               <div class="d-flex justify-content-between align-items-center">
