--- a/carohr.html
+++ b/carohr.html
@@ -599,7 +599,7 @@ to {
       <div class="reveal row row-cols-3 row-cols-sm-3 row-cols-md-3 g-3">
         <div class="col">
           <div class="card h-100 shadow-sm">
-            <svg class="bi text-warning text-body-primary flex-shrink-0 me-3" width="100%" height="225"><use xlink:href="#incognito"></use></svg> 
+            <svg class="bi text-primary text-body-primary flex-shrink-0 me-3" width="100%" height="150"><use xlink:href="#incognito"></use></svg> 
            <div class="card-body" style="text-align: center">
               <p class="card-text">The</p>
               <div class="d-flex justify-content-between align-items-center">
@@ -609,7 +609,7 @@ to {
         </div>
         <div class="col">
           <div class="card h-100 shadow-sm">
-          <svg class="bi text-warning text-body-primary flex-shrink-0 me-3" width="100%" height="225"><use xlink:href="#incognito"></use></svg> 
+            <svg class="bi text-primary text-body-primary flex-shrink-0 me-3" width="100%" height="150"><use xlink:href="#robot"></use></svg> 
            <div class="card-body" style="text-align: center">
               <p class="card-text">Three</p>
               <div class="d-flex justify-content-between align-items-center">          
@@ -619,8 +619,8 @@ to {
         </div>
         <div class="col">
           <div class="card h-100 shadow-sm">
-           <svg class="bi text-warning text-body-primary flex-shrink-0 me-3" width="100%" height="225"><use xlink:href="#incognito"></use></svg> 
-            <div class="card-body" style="text-align: center">
+             <svg class="bi text-primary text-body-primary flex-shrink-0 me-3" width="100%" height="150"><use xlink:href="#incognito"></use></svg> 
+           <div class="card-body" style="text-align: center">
               <p class="card-text">Amigos</p>
               <div class="d-flex justify-content-between align-items-center">            
               </div>
@@ -759,7 +759,7 @@ to {
 <!-- NFT Collection -->
     <div class="reveal album">
       <h2 class="featurette-heading fw-normal lh-1">Our First NFT Collection</h2>
-      <p class="lead" style="padding-bottom:2rem">Very Special. Very Cool</p>
+      <p class="lead" style="padding-bottom:2rem">Very Special. Very Cool.</p>
 		    
       <div class="container">
 
