--- a/carohr.html
+++ b/carohr.html
@@ -482,7 +482,7 @@ to {
       <h3 class="fw-bold">Help Us Get To Outer Space!</h3>
       <p class="text-body-primary">Every dollar we make gets us one step closer to that giant leap.</p>
       <p> Donate any amount now...and we'll send you some branded goodies in return.</p>
-      <a href="#" class="btn btn-primary btn-lg">Donate Now!</a>
+      <div type="button" data-bs-toggle="modal" data-bs-target="#exampleModalToggle" class="btn btn-primary btn-lg">Donate Now!</div>
     </div>
     
     <div class="col">
