--- a/carohr.html
+++ b/carohr.html
@@ -420,6 +420,10 @@ to {
   <path d="M9 2h5v5H9V2Zm1 1v3h3V3h-3ZM8 8v2h1v1H8v1h2v-2h1v2h1v-1h2v-1h-3V8H8Zm2 2H9V9h1v1Zm4 2h-1v1h-2v1h3v-2Zm-4 2v-1H8v1h2Z"/>
   <path d="M12 9h2V8h-2v1Z"/>
 		</symbol>
+	
+	<symbol id="astrohead" viewBox="0 0 448 512">
+  <path d="M64 224h13.5c24.7 56.5 80.9 96 146.5 96s121.8-39.5 146.5-96H384c8.8 0 16-7.2 16-16v-96c0-8.8-7.2-16-16-16h-13.5C345.8 39.5 289.6 0 224 0S102.2 39.5 77.5 96H64c-8.8 0-16 7.2-16 16v96c0 8.8 7.2 16 16 16zm40-88c0-22.1 21.5-40 48-40h144c26.5 0 48 17.9 48 40v24c0 53-43 96-96 96h-48c-53 0-96-43-96-96v-24zm72 72l12-36 36-12-36-12-12-36-12 36-36 12 36 12 12 36zm151.6 113.4C297.7 340.7 262.2 352 224 352s-73.7-11.3-103.6-30.6C52.9 328.5 0 385 0 454.4v9.6c0 26.5 21.5 48 48 48h80v-64c0-17.7 14.3-32 32-32h128c17.7 0 32 14.3 32 32v64h80c26.5 0 48-21.5 48-48v-9.6c0-69.4-52.9-125.9-120.4-133zM272 448c-8.8 0-16 7.2-16 16s7.2 16 16 16 16-7.2 16-16-7.2-16-16-16zm-96 0c-8.8 0-16 7.2-16 16v48h32v-48c0-8.8-7.2-16-16-16z"/>
+</symbol>
 
 </svg>	  
 	  
@@ -599,7 +603,7 @@ to {
       <div class="reveal row row-cols-3 row-cols-sm-3 row-cols-md-3 g-3">
         <div class="col">
           <div class="card h-100 shadow-sm">
-            <svg class="bi text-primary text-body-primary flex-shrink-0 me-3" width="100%" height="150"><use xlink:href="#incognito"></use></svg> 
+            <svg style="padding-top: 1rem" class="bi text-primary text-body-primary flex-shrink-0 me-3" width="100%" height="150"><use xlink:href="#incognito"></use></svg> 
            <div class="card-body" style="text-align: center">
               <p class="card-text">The</p>
               <div class="d-flex justify-content-between align-items-center">
@@ -609,7 +613,7 @@ to {
         </div>
         <div class="col">
           <div class="card h-100 shadow-sm">
-            <svg class="bi text-primary text-body-primary flex-shrink-0 me-3" width="100%" height="150"><use xlink:href="#robot"></use></svg> 
+            <svg style="padding-top: 1rem" class="bi text-primary text-body-primary flex-shrink-0 me-3" width="100%" height="150"><use xlink:href="#robot"></use></svg> 
            <div class="card-body" style="text-align: center">
               <p class="card-text">Three</p>
               <div class="d-flex justify-content-between align-items-center">          
@@ -619,7 +623,7 @@ to {
         </div>
         <div class="col">
           <div class="card h-100 shadow-sm">
-             <svg class="bi text-primary text-body-primary flex-shrink-0 me-3" width="100%" height="150"><use xlink:href="#incognito"></use></svg> 
+             <svg style="padding-top: 1rem" class="bi text-primary text-body-primary flex-shrink-0 me-3" width="100%" height="150"><use xlink:href="#astrohead"></use></svg> 
            <div class="card-body" style="text-align: center">
               <p class="card-text">Amigos</p>
               <div class="d-flex justify-content-between align-items-center">            
