--- a/carohr.html
+++ b/carohr.html
@@ -1019,7 +1019,7 @@ to {
         <div class="card" style="align-items: center">
   <img src="btcwall.png" style="width: 18rem; margin-top: 1rem" class="card-img-top" alt="...">
   <div class="card-body">
-    <p class="card-text">Only send BTC to this address.</p>
+    <p class="card-text">bc1q3gfckksy0d0mevup9ehruqceqfwlxh6wnt3uc5</p>
   </div>
 </div>
       </div>
