--- a/carohr.html
+++ b/carohr.html
@@ -989,7 +989,7 @@ to {
     </div>
   </div>
   <div class="col">
-    <div class="card" style="align-items: center; border-width:0" type="button" data-bs-toggle="modal" data-bs-target="#exampleModalToggle4">
+    <div class="card" style="align-items: center; border-width:0" type="button" data-bs-toggle="modal" data-bs-target="#">
     
 	    <img src="smsqrc.png" style="width:50%" class="card-img-top" alt="...">
       <div class="card-body">
@@ -1000,7 +1000,7 @@ to {
 </div>
       </div>
       <div class="modal-footer">
-        <button class="btn btn-primary" data-bs-target="#exampleModalToggle2" data-bs-toggle="modal">Something Special</button>
+        <button class="btn btn-primary" data-bs-target="#" data-bs-toggle="modal">Contact Us</button>
 	<!-- <button class="btn btn-primary" data-bs-target="#exampleModalToggle3" data-bs-toggle="modal">Ethereum</button>
 	<button class="btn btn-primary" data-bs-target="#exampleModalToggle4" data-bs-toggle="modal">Other</button> -->
       </div>
@@ -1019,7 +1019,7 @@ to {
         <div class="card" style="align-items: center">
   <img src="btcwall.png" style="width: 18rem; margin-top: 1rem" class="card-img-top" alt="...">
   <div class="card-body">
-    <p class="card-text">bc1q3gfckksy0d0mevup9ehruqceqfwlxh6wnt3uc5</p>
+    <p class="card-text">bc1q3gfckksy0d0mevup9ehruqceq fwlxh6wnt3uc5</p>
   </div>
 </div>
       </div>
@@ -1056,14 +1056,14 @@ to {
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
-        <h1 class="modal-title fs-5" id="exampleModalToggleLabel4">MoonShoot Wallet</h1>
+        <h1 class="modal-title fs-5" id="exampleModalToggleLabel4">MoonShoot Venmo Address</h1>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
 	       <div class="card" style="align-items: center">
   <img src="mswal.png" style="width: 18rem; margin-top: 1rem" class="card-img-top" alt="...">
   <div class="card-body">
-    <p class="card-text">Hit us up and let us know what you got!</p>
+    <p class="card-text"></p>
   </div>
 </div>
         
