--- a/carohr.html
+++ b/carohr.html
@@ -591,7 +591,7 @@ to {
 <!-- Astronaut section-->
 <section id="astro" style="background-color:black; color:white; box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5); margin-bottom: 3rem; padding-top: 3rem !important">
 
-  <div class="container px-4">
+  <div class="container px-4" style="margin-top:3rem">
     <div class="row">
       <div class="reveal">
         <h2 class="pb-2 border-bottom" style="color:white">The Astronauts</h2>
@@ -605,7 +605,7 @@ to {
           <div class="card h-100 shadow-sm">
             <svg style="padding-top: 1rem" class="bi text-primary text-body-primary flex-shrink-0 me-3" width="100%" height="150"><use xlink:href="#incognito"></use></svg> 
            <div class="card-body" style="text-align: center">
-              <p class="card-text">The</p>
+              <p class="card-text" style="color: white">The</p>
               <div class="d-flex justify-content-between align-items-center">
               </div>
             </div>
@@ -615,7 +615,7 @@ to {
           <div class="card h-100 shadow-sm">
             <svg style="padding-top: 1rem" class="bi text-primary text-body-primary flex-shrink-0 me-3" width="100%" height="150"><use xlink:href="#robot"></use></svg> 
            <div class="card-body" style="text-align: center">
-              <p class="card-text">Three</p>
+              <p class="card-text" style="color: white">Three</p>
               <div class="d-flex justify-content-between align-items-center">          
               </div>
             </div>
@@ -625,7 +625,7 @@ to {
           <div class="card h-100 shadow-sm">
              <svg style="padding-top: 1rem" class="bi text-primary text-body-primary flex-shrink-0 me-3" width="100%" height="150"><use xlink:href="#astrohead"></use></svg> 
            <div class="card-body" style="text-align: center">
-              <p class="card-text">Amigos</p>
+              <p class="card-text" style="color: white">Amigos</p>
               <div class="d-flex justify-content-between align-items-center">            
               </div>
             </div>
