--- a/carohr.html
+++ b/carohr.html
@@ -591,7 +591,7 @@ to {
 <!-- Astronaut section-->
 <section id="astro" style="background-color:black; color:white; box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5); margin-bottom: 3rem; padding-top: 3rem !important">
 
-  <div class="container px-4" style="margin-top:3rem">
+  <div class="container px-4">
     <div class="row">
       <div class="reveal">
         <h2 class="pb-2 border-bottom" style="color:white">The Astronauts</h2>
@@ -599,7 +599,7 @@ to {
     </div>
   </div>			
 			
-  <div class="container">
+  <div class="container" style="margin-top:3rem">
       <div class="reveal row row-cols-3 row-cols-sm-3 row-cols-md-3 g-3">
         <div class="col">
           <div class="card h-100 shadow-sm">
