--- a/carohr.html
+++ b/carohr.html
@@ -421,7 +421,7 @@ to {
   <path d="M12 9h2V8h-2v1Z"/>
 		</symbol>
 	
-	<symbol id="astrohead" viewBox="0 0 448 512">
+	<symbol id="astroh" viewBox="0 0 448 512">
   <path d="M64 224h13.5c24.7 56.5 80.9 96 146.5 96s121.8-39.5 146.5-96H384c8.8 0 16-7.2 16-16v-96c0-8.8-7.2-16-16-16h-13.5C345.8 39.5 289.6 0 224 0S102.2 39.5 77.5 96H64c-8.8 0-16 7.2-16 16v96c0 8.8 7.2 16 16 16zm40-88c0-22.1 21.5-40 48-40h144c26.5 0 48 17.9 48 40v24c0 53-43 96-96 96h-48c-53 0-96-43-96-96v-24zm72 72l12-36 36-12-36-12-12-36-12 36-36 12 36 12 12 36zm151.6 113.4C297.7 340.7 262.2 352 224 352s-73.7-11.3-103.6-30.6C52.9 328.5 0 385 0 454.4v9.6c0 26.5 21.5 48 48 48h80v-64c0-17.7 14.3-32 32-32h128c17.7 0 32 14.3 32 32v64h80c26.5 0 48-21.5 48-48v-9.6c0-69.4-52.9-125.9-120.4-133zM272 448c-8.8 0-16 7.2-16 16s7.2 16 16 16 16-7.2 16-16-7.2-16-16-16zm-96 0c-8.8 0-16 7.2-16 16v48h32v-48c0-8.8-7.2-16-16-16z"/>
 </symbol>
 
@@ -604,7 +604,7 @@ to {
         <div class="col">
 		<div style="position:relative">
           <div class="card h-100 shadow-sm" style="background-blend-mode: overlay,normal,normal,color-dodge,normal; filter: blur(10px) brightness(100%); background:radial-gradient(19.49% 58.52% at 50% 0,rgba(249,196,60,.3) 0,rgba(231,166,1,0) 100%),radial-gradient(50% 50% at 100% 100%,#520aeb 10.27%,rgba(159,115,255,0) 100%),radial-gradient(77.86% 77.86% at 100% 0,#00a7ff 0,rgba(0,166,254,.12) 100%),radial-gradient(50% 50% at 0 0,#ff8d6c 0,rgba(255,92,0,.6) 100%),radial-gradient(70.24% 70.24% at 0 100%,#e81d72 0,rgba(255,0,0,0) 100%)">
-		   <svg style="padding-top: 1rem" class="bi text-primary" aria-label="Placeholder: Thumbnail" focusable="false"><use xlink:href="#robot"/></svg>
+		   <svg width="100%" height="150" style="padding-top: 1rem" class="bi text-primary" aria-label="Placeholder: Thumbnail" focusable="false"><use xlink:href="#robot"/></svg>
 		   <div class="card-body" style="text-align: center">
               <p class="card-text">Three</p>
               <div class="d-flex justify-content-between align-items-center">
@@ -613,7 +613,7 @@ to {
           </div>
 		  <div style="position:absolute; top:0px; width:100%">
           <div class="card h-100 shadow-sm" style="background-blend-mode: overlay,normal,normal,color-dodge,normal; filter: blur(5px) brightness(100%); background:radial-gradient(19.49% 58.52% at 50% 0,rgba(249,196,60,.3) 0,rgba(231,166,1,0) 100%),radial-gradient(50% 50% at 100% 100%,#520aeb 10.27%,rgba(159,115,255,0) 100%),radial-gradient(77.86% 77.86% at 100% 0,#00a7ff 0,rgba(0,166,254,.12) 100%),radial-gradient(50% 50% at 0 0,#ff8d6c 0,rgba(255,92,0,.6) 100%),radial-gradient(70.24% 70.24% at 0 100%,#e81d72 0,rgba(255,0,0,0) 100%)">
-		   <svg style="padding-top: 1rem" class="bi text-primary" aria-label="Placeholder: Thumbnail" focusable="false"><use xlink:href="#robot"/></svg>
+		   <svg width="100%" height="150" style="padding-top: 1rem" class="bi text-primary" aria-label="Placeholder: Thumbnail" focusable="false"><use xlink:href="#robot"/></svg>
 		   <div class="card-body" style="text-align: center">
               <p class="card-text">Three</p>
               <div class="d-flex justify-content-between align-items-center">
@@ -623,7 +623,7 @@ to {
 		  </div>
 		  		  <div style="position:absolute; top:0px; width:100%">
 		            <div class="card h-100 shadow-sm">
-					<svg style="padding-top: 1rem" class="bi text-primary" aria-label="Placeholder: Thumbnail" focusable="false"><use xlink:href="#incognito"/></svg>
+					<svg width="100%" height="150" style="padding-top: 1rem" class="bi text-primary" aria-label="Placeholder: Thumbnail" focusable="false"><use xlink:href="#incognito"/></svg>
 		   <div class="card-body" style="text-align: center">
               <p class="card-text">The</p>
               <div class="d-flex justify-content-between align-items-center">
@@ -641,7 +641,7 @@ to {
         <div class="col">
 		<div style="position:relative">
           <div class="card h-100 shadow-sm" style="background-blend-mode: overlay,normal,normal,color-dodge,normal; filter: blur(10px) brightness(100%); background:radial-gradient(19.49% 58.52% at 50% 0,rgba(249,196,60,.3) 0,rgba(231,166,1,0) 100%),radial-gradient(50% 50% at 100% 100%,#520aeb 10.27%,rgba(159,115,255,0) 100%),radial-gradient(77.86% 77.86% at 100% 0,#00a7ff 0,rgba(0,166,254,.12) 100%),radial-gradient(50% 50% at 0 0,#ff8d6c 0,rgba(255,92,0,.6) 100%),radial-gradient(70.24% 70.24% at 0 100%,#e81d72 0,rgba(255,0,0,0) 100%)">
-		   <svg style="padding-top: 1rem" class="bi text-primary" aria-label="Placeholder: Thumbnail" focusable="false"><use xlink:href="#robot"/></svg>
+		   <svg width="100%" height="150" style="padding-top: 1rem" class="bi text-primary" aria-label="Placeholder: Thumbnail" focusable="false"><use xlink:href="#robot"/></svg>
 		   <div class="card-body" style="text-align: center">
               <p class="card-text">Three</p>
               <div class="d-flex justify-content-between align-items-center">
@@ -650,7 +650,7 @@ to {
           </div>
 		  		  <div style="position:absolute; top:0px; width:100%">
           <div class="card h-100 shadow-sm" style="background-blend-mode: overlay,normal,normal,color-dodge,normal; filter: blur(5px) brightness(100%); background:radial-gradient(19.49% 58.52% at 50% 0,rgba(249,196,60,.3) 0,rgba(231,166,1,0) 100%),radial-gradient(50% 50% at 100% 100%,#520aeb 10.27%,rgba(159,115,255,0) 100%),radial-gradient(77.86% 77.86% at 100% 0,#00a7ff 0,rgba(0,166,254,.12) 100%),radial-gradient(50% 50% at 0 0,#ff8d6c 0,rgba(255,92,0,.6) 100%),radial-gradient(70.24% 70.24% at 0 100%,#e81d72 0,rgba(255,0,0,0) 100%)">
-		   <svg style="padding-top: 1rem" class="bi text-primary" aria-label="Placeholder: Thumbnail" focusable="false"><use xlink:href="#robot"/></svg>
+		   <svg width="100%" height="150" style="padding-top: 1rem" class="bi text-primary" aria-label="Placeholder: Thumbnail" focusable="false"><use xlink:href="#robot"/></svg>
 		   <div class="card-body" style="text-align: center">
               <p class="card-text">Three</p>
               <div class="d-flex justify-content-between align-items-center">
@@ -660,7 +660,7 @@ to {
 		  </div>
 		  <div style="position:absolute; top:0px; width:100%">
 		            <div class="card h-100 shadow-sm">
-					<svg style="padding-top: 1rem" class="bi text-primary" aria-label="Placeholder: Thumbnail" focusable="false"><use xlink:href="#robot"/></svg>
+					<svg width="100%" height="150" style="padding-top: 1rem" class="bi text-primary" aria-label="Placeholder: Thumbnail" focusable="false"><use xlink:href="#robot"/></svg>
 		   <div class="card-body" style="text-align: center">
               <p class="card-text">Three</p>
               <div class="d-flex justify-content-between align-items-center">
@@ -675,7 +675,7 @@ to {
         <div class="col">
 		<div style="position:relative">
           <div class="card h-100 shadow-sm" style="background-blend-mode: overlay,normal,normal,color-dodge,normal; filter: blur(10px) brightness(100%); background:radial-gradient(19.49% 58.52% at 50% 0,rgba(249,196,60,.3) 0,rgba(231,166,1,0) 100%),radial-gradient(50% 50% at 100% 100%,#520aeb 10.27%,rgba(159,115,255,0) 100%),radial-gradient(77.86% 77.86% at 100% 0,#00a7ff 0,rgba(0,166,254,.12) 100%),radial-gradient(50% 50% at 0 0,#ff8d6c 0,rgba(255,92,0,.6) 100%),radial-gradient(70.24% 70.24% at 0 100%,#e81d72 0,rgba(255,0,0,0) 100%)">
-		   <svg style="padding-top: 1rem" class="bi text-info" aria-label="Placeholder: Thumbnail" focusable="false"><use xlink:href="#robot"/></svg>
+		   <svg width="100%" height="150" style="padding-top: 1rem" class="bi text-info" aria-label="Placeholder: Thumbnail" focusable="false"><use xlink:href="#robot"/></svg>
 		   <div class="card-body" style="text-align: center">
               <p class="card-text">Three</p>
               <div class="d-flex justify-content-between align-items-center">
@@ -684,7 +684,7 @@ to {
           </div>
 		  		  <div style="position:absolute; top:0px; width:100%">
           <div class="card h-100 shadow-sm" style="background-blend-mode: overlay,normal,normal,color-dodge,normal; filter: blur(5px) brightness(100%); background:radial-gradient(19.49% 58.52% at 50% 0,rgba(249,196,60,.3) 0,rgba(231,166,1,0) 100%),radial-gradient(50% 50% at 100% 100%,#520aeb 10.27%,rgba(159,115,255,0) 100%),radial-gradient(77.86% 77.86% at 100% 0,#00a7ff 0,rgba(0,166,254,.12) 100%),radial-gradient(50% 50% at 0 0,#ff8d6c 0,rgba(255,92,0,.6) 100%),radial-gradient(70.24% 70.24% at 0 100%,#e81d72 0,rgba(255,0,0,0) 100%)">
-		   <svg style="padding-top: 1rem" class="bi text-primary" aria-label="Placeholder: Thumbnail" focusable="false"><use xlink:href="#robot"/></svg>
+		   <svg width="100%" height="150" style="padding-top: 1rem" class="bi text-primary" aria-label="Placeholder: Thumbnail" focusable="false"><use xlink:href="#robot"/></svg>
 		   <div class="card-body" style="text-align: center">
               <p class="card-text">Three</p>
               <div class="d-flex justify-content-between align-items-center">
@@ -694,7 +694,7 @@ to {
 		  </div>
 		  <div style="position:absolute; top:0px; width:100%">
 		            <div class="card h-100 shadow-sm">
-					<svg style="padding-top: 1rem" class="bi text-primary" aria-label="Placeholder: Thumbnail" focusable="false"><use xlink:href="#astroh"/></svg>
+					<svg width="100%" height="150" style="padding-top: 1rem" class="bi text-primary" aria-label="Placeholder: Thumbnail" focusable="false"><use xlink:href="#astroh"/></svg>
 		   <div class="card-body" style="text-align: center">
               <p class="card-text">Amigos</p>
               <div class="d-flex justify-content-between align-items-center">
