--- a/carohr.html
+++ b/carohr.html
@@ -623,7 +623,7 @@ to {
 		  </div>
 		  		  <div style="position:absolute; top:0px; width:100%">
 		            <div class="card h-100 shadow-sm">
-					<svg width="100%" height="150" style="padding-top: 1rem" class="bi text-primary" aria-label="Placeholder: Thumbnail" focusable="false"><use xlink:href="#incognito"/></svg>
+					<svg width="100%" height="150" style="padding: 0.5rem" class="bi text-primary" aria-label="Placeholder: Thumbnail" focusable="false"><use xlink:href="#incognito"/></svg>
 		   <div class="card-body" style="text-align: center">
               <p class="card-text">The</p>
               <div class="d-flex justify-content-between align-items-center">
@@ -660,7 +660,7 @@ to {
 		  </div>
 		  <div style="position:absolute; top:0px; width:100%">
 		            <div class="card h-100 shadow-sm">
-					<svg width="100%" height="150" style="padding-top: 1rem" class="bi text-primary" aria-label="Placeholder: Thumbnail" focusable="false"><use xlink:href="#robot"/></svg>
+					<svg width="100%" height="150" style="padding: 0.5rem" class="bi text-primary" aria-label="Placeholder: Thumbnail" focusable="false"><use xlink:href="#robot"/></svg>
 		   <div class="card-body" style="text-align: center">
               <p class="card-text">Three</p>
               <div class="d-flex justify-content-between align-items-center">
@@ -694,7 +694,7 @@ to {
 		  </div>
 		  <div style="position:absolute; top:0px; width:100%">
 		            <div class="card h-100 shadow-sm">
-					<svg width="100%" height="150" style="padding-top: 1rem" class="bi text-primary" aria-label="Placeholder: Thumbnail" focusable="false"><use xlink:href="#astroh"/></svg>
+					<svg width="100%" height="150" style="padding: 0.5rem" class="bi text-primary" aria-label="Placeholder: Thumbnail" focusable="false"><use xlink:href="#astroh"/></svg>
 		   <div class="card-body" style="text-align: center">
               <p class="card-text">Amigos</p>
               <div class="d-flex justify-content-between align-items-center">
