--- a/carohr.html
+++ b/carohr.html
@@ -248,7 +248,7 @@ to {
   --size: 30vmin;
   position: fixed; 
  /* position: relative; */
-  top: 50%;
+  top: 0%;
   left: 50%;
   width: 0;
   height: 0;
@@ -375,11 +375,11 @@ to {
 #green{
   position:fixed;
   left: 50%;
-  top: 100px;
+  top: 20%;
   width:150px;
   height:150px;
-  background:green;
-	opacity:0.3;
+ /* background:green;
+	opacity:0.3; */
   }
 	
     
