--- a/carohr.html
+++ b/carohr.html
@@ -375,11 +375,11 @@ to {
 #green{
   position:fixed;
   left: 50%;
-  top: 20%;
-  width:150px;
+  top: 30%;
+/*   width:150px;
   height:150px;
- /* background:green;
-	opacity:0.3; */
+ background:green;*/
+	opacity:0.3; 
   }
 	
     
