--- a/carohr.html
+++ b/carohr.html
@@ -245,15 +245,15 @@ to {
 }	
 
 .cube-wraperbg {
-  --size: 30vmin;
+  --size: 40vmin;
   position: fixed; 
  /* position: relative; */
-  top: 0%;
+  top: 50%;
   left: 50%;
   width: 0;
   height: 0;
   perspective: 100vmin;
-  opacity: 1;
+  opacity: .2;
 }	 
 	    
 .cubebg {
@@ -298,15 +298,15 @@ to {
 }
 
 .cube-wrapersm {
-  --size: 20vmin;
+  --size: 40vmin;
   position: fixed; 
  /* position: relative; */
-  top: 15%;
-  left: 15%;
+  top: 50%;
+  left: 50%;
   width: 0;
   height: 0;
   perspective: 100vmin;
-   opacity: 0.1;
+   opacity: 0.2;
 }
 .cubesm {
   transform-style: preserve-3d;
@@ -375,11 +375,11 @@ to {
 #green{
   position:fixed;
   left: 50%;
-  top: 35%;
+  top: 30%;
 /*   width:150px;
   height:150px;
  background:green;*/
-	opacity:0.3; 
+	opacity:1; 
   }
 	
     
