--- a/carohr.html
+++ b/carohr.html
@@ -253,7 +253,7 @@ to {
   width: 0;
   height: 0;
   perspective: 100vmin;
-  opacity: .2;
+  opacity: 0.1;
 }	 
 	    
 .cubebg {
@@ -375,7 +375,7 @@ to {
 #green{
   position:fixed;
   left: 50%;
-  top: 30%;
+  top: 35%;
 /*   width:150px;
   height:150px;
  background:green;*/
