--- a/carohr.html
+++ b/carohr.html
@@ -271,14 +271,14 @@
 	*/	
 
 .cube-wraperbg {
-  --size: 40vmin;
+  --size: 30vmin;
   position: fixed; 
   top: 50%;
   left: 50%;
   width: 0;
   height: 0;
   perspective: 100vmin;
-  opacity: 0.2;
+  opacity: 0.1;
 }	 
 	    
 .cubebg {
@@ -718,7 +718,7 @@
 	<div class="container px-4">
                 <div class="row">
                     <div class="reveal">
-			<h2 class="pb-2 border-bottom" style="color:white">The Collection</h2>
+			<h2 class="pb-2 border-bottom" style="color:white">The Collectibles</h2>
                     </div>
                 </div>
             </div>
