--- a/carohr.html
+++ b/carohr.html
@@ -443,6 +443,14 @@
 </symbol>
 
 </svg>	  
+	<!-- For Balloon Gradient -->
+	<svg style="width:0;height:0;position:absolute;" aria-hidden="true" focusable="false">
+  <linearGradient id="my-cool-gradient" x2="1" y2="1">
+    <stop offset="10%" stop-color="#60A9FF" />  
+    <stop offset="90%" stop-color="#D187FF" />
+ <!--   <stop offset="100%" stop-color="#112266" /> -->
+  </linearGradient>
+</svg>
 	  
 	    
 <!-- Small Cube for Mobile  
@@ -489,7 +497,7 @@
 </div> -->
 	 
 	  
-<!-- First Section -->  
+<!-- Rocket Logo Section -->  
 <header class="text-white" style="background: linear-gradient(180deg,#0a0c21,rgba(0,0,0) 90%); box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5); padding-top: 5rem !important; padding-bottom: 5rem">
   <div class="container px-4 text-center">
     <div style="position:relative">
@@ -507,20 +515,22 @@
 	  
 <!-- Mission section-->	
 <div class="container px-4 py-5">
-  <h2 class="reveal pb-2 border-bottom">The Mission</h2>
+  <h2 class="reveal pb-2 border-bottom" style="font-size: 52px; background: -webkit-linear-gradient(55deg, #60A9FF 10%, #D187FF 90%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;">The Mission</h2>
 
   <div class="reveal row row-cols-1 row-cols-md-2 align-items-md-center g-5 py-5">
     <div class="col d-flex flex-column align-items-start gap-2">
       <h3 class="fw-bold">Help Us Get To Outer Space!</h3>
       <p class="text-body-primary">Every dollar we make gets us one step closer to that giant leap.</p>
       <p> Donate any amount now...and we'll send you some branded goodies in return.</p>
-      <div type="button" data-bs-toggle="modal" data-bs-target="#exampleModalToggle" class="btn btn-primary btn-lg">Donate Now!</div>
+      <div type="button" data-bs-toggle="modal" data-bs-target="#exampleModalToggle" class="btn btn-primary btn-lg" style="background-image: linear-gradient(55deg, #0b5ed7 10%, #D187FF 90%)">Donate Now!</div>
     </div>
     
     <div class="col">
       <div class="row row-cols-1 row-cols-sm-2 g-4">	  
         <div class="col d-flex align-items-start">
-          <svg class="bi text-primary text-body-primary flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#balloon-heart"></use></svg>
+          <svg class="text-primary text-body-primary flex-shrink-0 me-3" width="1.75em" height="1.75em" fill="url(#my-cool-gradient)"><use xlink:href="#balloon-heart"></use></svg>
           <div>
             <h3 class="fw-bold mb-0 fs-4">Phase 1: Fundraise</h3>
             <p>Sell Merch & NFT's<br>Host Events<br>Rinse and Repeat</p>
@@ -528,7 +538,7 @@
         </div>
 	  
         <div class="col d-flex align-items-start">
-          <svg class="bi text-primary text-body-primary flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#balloon-heart"></use></svg>
+          <svg class="text-primary text-body-primary flex-shrink-0 me-3" width="1.75em" height="1.75em" fill="url(#my-cool-gradient)"><use xlink:href="#balloon-heart"></use></svg>
           <div>
             <h3 class="fw-bold mb-0 fs-4">Phase 2: Invest</h3>
             <p>Real Estate<br>Other<br>Etc.</p>
@@ -536,15 +546,15 @@
         </div>
 	  
         <div class="col d-flex align-items-start">
-          <svg class="bi text-primary text-body-primary flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#balloon-heart"></use></svg>
+          <svg class="text-primary text-body-primary flex-shrink-0 me-3" width="1.75em" height="1.75em" fill="url(#my-cool-gradient)"><use xlink:href="#balloon-heart"></use></svg>
           <div>
             <h3 class="fw-bold mb-0 fs-4">Phase 3: Buy Tickets</h3>
-            <p>$250,000<br>$500,000<br>$1,000,000</p>
+            <p>$500,000?<br>$1,000,000?</p>
           </div>
         </div>
 	  
 	<div class="col d-flex align-items-start">
-          <svg class="bi text-primary text-body-primary flex-shrink-0 me-3" width="1.75em" height="1.75em"><use xlink:href="#balloon-heart"></use></svg>
+          <svg class="text-primary text-body-primary flex-shrink-0 me-3" width="1.75em" height="1.75em" fill="url(#my-cool-gradient)"><use xlink:href="#balloon-heart"></use></svg>
           <div>
             <h3 class="fw-bold mb-0 fs-4">Phase 4: Fulfil Mission</h3>
             <p>Take the ride<br>Die Happy</p>
