--- a/carohr.html
+++ b/carohr.html
@@ -574,14 +574,16 @@
   <div class="container px-4">
     <div class="row">
       <div class="reveal">
-        <h2 class="pb-2 border-bottom" style="color:white">The Astronauts</h2>
+        <h2 class="pb-2 border-bottom" style="font-size: 52px; background: -webkit-linear-gradient(55deg, #60A9FF 10%, #D187FF 90%); -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent">The Astronauts</h2>
       </div>
     </div>
   </div>			
 			
   <div class="container" style="margin-top:3rem">
       <div class="reveal row row-cols-3 row-cols-sm-3 row-cols-md-3 g-3">
-        <div class="col">
+     
+	    <div class="col">
 		<div style="position:relative">
           <div class="card h-100 shadow-sm" style="background-blend-mode: overlay,normal,normal,color-dodge,normal; filter: blur(10px) brightness(100%); background:radial-gradient(19.49% 58.52% at 50% 0,rgba(249,196,60,.3) 0,rgba(231,166,1,0) 100%),radial-gradient(50% 50% at 100% 100%,#520aeb 10.27%,rgba(159,115,255,0) 100%),radial-gradient(77.86% 77.86% at 100% 0,#00a7ff 0,rgba(0,166,254,.12) 100%),radial-gradient(50% 50% at 0 0,#ff8d6c 0,rgba(255,92,0,.6) 100%),radial-gradient(70.24% 70.24% at 0 100%,#e81d72 0,rgba(255,0,0,0) 100%)">
 		   <svg width="100%" height="150" style="padding-top: 1rem" class="bi text-primary" aria-label="Placeholder: Thumbnail" focusable="false"><use xlink:href="#robot"/></svg>
@@ -617,36 +619,37 @@
 		
         <div class="col">
 		<div style="position:relative">
-          <div class="card h-100 shadow-sm" style="background-blend-mode: overlay,normal,normal,color-dodge,normal; filter: blur(10px) brightness(100%); background:radial-gradient(19.49% 58.52% at 50% 0,rgba(249,196,60,.3) 0,rgba(231,166,1,0) 100%),radial-gradient(50% 50% at 100% 100%,#520aeb 10.27%,rgba(159,115,255,0) 100%),radial-gradient(77.86% 77.86% at 100% 0,#00a7ff 0,rgba(0,166,254,.12) 100%),radial-gradient(50% 50% at 0 0,#ff8d6c 0,rgba(255,92,0,.6) 100%),radial-gradient(70.24% 70.24% at 0 100%,#e81d72 0,rgba(255,0,0,0) 100%)">
-		   <svg width="100%" height="150" style="padding-top: 1rem" class="bi text-primary" aria-label="Placeholder: Thumbnail" focusable="false"><use xlink:href="#robot"/></svg>
-		   <div class="card-body" style="text-align: center">
-              <p class="card-text">Three</p>
+          <div class="card h-100 shadow-sm" style="opacity: 1; transition: opacity .5s; transform: scale(0.8); filter: blur(70px); width: 100%; height: 100%; background-image: linear-gradient(var(--rotate), #5ddcff, #3c67e3 43%, #4e00c2); animation: spin 4.5s linear infinite;">
+		    <svg width="100%" height="150" style="padding-top: 1rem" class="bi text-primary" aria-label="Placeholder: Thumbnail" focusable="false"><use xlink:href="#incognito"/></svg>
+		    <div class="card-body" style="text-align: center">
+              <p class="card-text">The</p>
               <div class="d-flex justify-content-between align-items-center">
               </div>
             </div>
           </div>
-		  		  <div style="position:absolute; top:0px; width:100%">
-          <div class="card h-100 shadow-sm" style="background-blend-mode: overlay,normal,normal,color-dodge,normal; filter: blur(5px) brightness(100%); background:radial-gradient(19.49% 58.52% at 50% 0,rgba(249,196,60,.3) 0,rgba(231,166,1,0) 100%),radial-gradient(50% 50% at 100% 100%,#520aeb 10.27%,rgba(159,115,255,0) 100%),radial-gradient(77.86% 77.86% at 100% 0,#00a7ff 0,rgba(0,166,254,.12) 100%),radial-gradient(50% 50% at 0 0,#ff8d6c 0,rgba(255,92,0,.6) 100%),radial-gradient(70.24% 70.24% at 0 100%,#e81d72 0,rgba(255,0,0,0) 100%)">
-		   <svg width="100%" height="150" style="padding-top: 1rem" class="bi text-primary" aria-label="Placeholder: Thumbnail" focusable="false"><use xlink:href="#robot"/></svg>
-		   <div class="card-body" style="text-align: center">
-              <p class="card-text">Three</p>
-              <div class="d-flex justify-content-between align-items-center">
+		  <div style="position:absolute; width:100%; top: -2%; height: 103%;">
+            <div class="card h-100 shadow-sm" style="border-radius: 8px; width: 104%; height: 100%; left:-2%; background-image: linear-gradient(var(--rotate), #5ddcff, #3c67e3 43%, #4e00c2); animation: spin 4.5s linear infinite;">
+		      <svg width="100%" height="150" style="padding-top: 1rem" class="bi text-primary" aria-label="Placeholder: Thumbnail" focusable="false"><use xlink:href="#incognito"/></svg>
+		      <div class="card-body" style="text-align: center">
+                <p class="card-text">The</p>
+                <div class="d-flex justify-content-between align-items-center">
+                </div>
               </div>
             </div>
-          </div>
 		  </div>
 		  <div style="position:absolute; top:0px; width:100%">
-		            <div class="card h-100 shadow-sm">
-					<svg width="100%" height="150" style="padding: 0.5rem" class="bi text-primary" aria-label="Placeholder: Thumbnail" focusable="false"><use xlink:href="#robot"/></svg>
-		   <div class="card-body" style="text-align: center">
-              <p class="card-text">Three</p>
-              <div class="d-flex justify-content-between align-items-center">
+		    <div class="card h-100 shadow-sm">
+			  <svg style="padding-top: 0rem" class="bi text-primary" aria-label="Placeholder: Thumbnail" focusable="false"><use xlink:href="#incognit"/></svg>
+		      <div class="card-body" style="text-align: center">
+                <p class="card-text">Three</p>
+                <div class="d-flex justify-content-between align-items-center">
+                </div>
               </div>
             </div>
-          </div>
 		  </div>
         </div>
-		</div>
+      </div>
+	
 		
 
         <div class="col">
@@ -696,9 +699,10 @@
 </section>	
 	<div class="container px-4">
                 <div class="row">
-                    <div class="reveal">
-			<h2 class="pb-2 border-bottom" style="color:white">The Collectibles</h2>
-                    </div>
+                  <div class="reveal">
+        <h2 class="pb-2 border-bottom" style="padding-top:6rem; font-size: 52px; background: -webkit-linear-gradient(55deg, #60A9FF 10%, #D187FF 90%); -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent">The Collectibles</h2>
+      </div>
                 </div>
             </div>
 	
